...

  const isFuture = isFutureDate();

  return (
    <View style={styles.container}>
      <View style={[styles.header, { backgroundColor: colors.primary }]}>
        <Text style={styles.title}>LAS DELICIAS DEL CERDO</Text>
        <Text style={styles.subtitle}>"Srta Melis"</Text>
      </View>

      {/* Selector de fecha */}
      <View style={styles.dateSection}>
        <View style={styles.dateContainer}>
          <Text style={styles.dateLabel}>Fecha:</Text>
...
