...
              tabBarIcon: ({ color }) => (
                <Text style={{ fontSize: 20, color }}>📝</Text>
              ),
            }}
          />
          <Tab.Screen
            name="Estadísticas"
            component={ChartsScreen}
            options={{
              tabBarIcon: ({ color }) => (
                <Text style={{ fontSize: 20, color }}>📊</Text>
              ),
            }}
...
